cluster/apps/home-automation/home-assistant/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-nginx
  namespace: home-automation
  labels:
    app.kubernetes.io/service: home-assistant-nginx
    app.kubernetes.io/instance: home-assistant
  annotations: {}
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: nginx
    protocol: TCP
    name: nginx
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
